Updated to do right. Still not hashing correctly